--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,6 @@ commands =
 exclude = .tox,*.egg,build,data
 ignore = E301, E302, E303, E304, F401, E126, E123, E121, F841, E226, E128, E308, E501
 max-line-length = 160
+
+[pyflakes]
+ignore = E501
